--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ dependencies {
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 	implementation 'com.android.support:appcompat-v7:26.1.0'
 	implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-	implementation 'com.google.android.gms:play-services-maps:11.6.2'
+	implementation 'com.google.android.gms:play-services-maps:12.0.1'
+	implementation 'com.google.android.gms:play-services:12.0.1'
 	implementation 'com.github.bumptech.glide:glide:4.3.1'
 	annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
 	implementation 'com.hannesdorfmann.mosby3:mvp:3.1.0' // Plain MVP
